--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
     <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <application
         android:allowBackup="true"
@@ -34,7 +35,8 @@
             android:name=".CameraStreamActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.BackgroundService" />
+            android:theme="@style/Theme.BackgroundService"
+            android:launchMode="singleTop" />
         <activity
             android:name=".RemoteCameraViewActivity"
             android:theme="@style/Theme.AppCompat" />
