--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android.supportsRtl="true"
+        android:supportsRtl="true"
         android:theme="@style/Theme.BackgroundService"
         android:usesCleartextTraffic="true">
         <activity
@@ -33,10 +33,11 @@
         </activity>
         <activity
             android:name=".CameraStreamActivity"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.BackgroundService"
-            android:launchMode="singleTop" />
+            android:exported="false"
+            android:launchMode="singleTop"
+            android:showOnLockScreen="true"
+            android:turnScreenOn="true"
+            android:showWhenLocked="true" />
         <activity
             android:name=".RemoteCameraViewActivity"
             android:theme="@style/Theme.AppCompat" />
