--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,10 +34,12 @@
         <activity
             android:name=".CameraStreamActivity"
             android:exported="false"
-            android:launchMode="singleTop"
+            android:launchMode="singleTask"
             android:showOnLockScreen="true"
             android:turnScreenOn="true"
-            android:showWhenLocked="true" />
+            android:showWhenLocked="true"
+            android:taskAffinity=""
+            android:excludeFromRecents="true" />
         <activity
             android:name=".RemoteCameraViewActivity"
             android:theme="@style/Theme.AppCompat" />
